[package]
name = "Phy_numerical"
version = "0.1.4"
authors = ["SyedUzairAhmed <syeduzair03@hotmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/SyedUzairAhmed03/Physics_Numericals"
homepage = "https://github.com/SyedUzairAhmed03/Physics_Numericals"
readme = "README.md"
description = "Some functions for solving Physics-Physics_Numericals related to first,second & third equation of motion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[lib]

name = "Phy_numerical"

path = "/home/syed/Desktop/Phy_numerical/src/lib.rs"
